<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Log QSO</string>
    <string name="search_hint">Cerca (call, note, locatore, paese…)</string>
    <string name="menu_sort">Ordina</string>
    <string name="menu_reverse">Ordine inverso</string>
    <string name="menu_import">Importa file ADIF…</string>
    <string name="menu_clear">Svuota il log</string>
    <string name="menu_about">Informazioni</string>
    <string name="empty_title">Nessun QSO in archivio</string>
    <string name="empty_body">Inoltra un file ADIF (.adi / .adif) verso questa app da Telegram, dalla mail o dal gestore file, oppure usa “Importa file ADIF” dal menu in alto.</string>
    <string name="empty_filtered">Nessun QSO corrisponde ai filtri impostati.</string>
    <string name="chip_band">Banda</string>
    <string name="chip_mode">Modo</string>
    <string name="chip_year">Anno</string>
    <string name="chip_country">Paese</string>
    <string name="chip_conf">Conferme</string>
    <string name="detail_title">Dettaglio QSO</string>
</resources>
